--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,8 @@
-
 services:
   - type: web
     name: tradingview-webhook
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn btc_trading_bot:app --bind 0.0.0.0:$PORT
+    startCommand: python btc_trading_bot.py
+
